--- a/backend/app/config/routing.yml
+++ b/backend/app/config/routing.yml
@@ -10,6 +10,12 @@ civix_api_v2:
     prefix:   /api/v2
     defaults: { _format: 'json', version: "2" }
 
+civix_api_v2.2:
+    resource: "@CivixApiBundle/Controller/V2_2/"
+    type:     annotation
+    prefix:   /api/v2.2
+    defaults: { _format: 'json', version: "2.2" }
+
 civix_api_public:
     resource: "@CivixApiBundle/Controller/PublicApi"
     type:     annotation
