--- a/backend/app/config/parameters.default.yml
+++ b/backend/app/config/parameters.default.yml
@@ -72,3 +72,7 @@ parameters:
     facebook_client_secret: yyy
 
     slack_logger_token: 'xoxp'
+
+    one_signal.app_id: xxx
+    one_signal.app_auth_key: xxx
+    one_signal.user_auth_key: xxx
