--- a/backend/app/config/parameters.vagrant.yml
+++ b/backend/app/config/parameters.vagrant.yml
@@ -50,3 +50,7 @@ parameters:
             lazy: true
 
     slack_logger_token: 'xoxp'
+
+    one_signal.app_id: xxx
+    one_signal.app_auth_key: xxx
+    one_signal.user_auth_key: xxx
