Add Group/PostController v2.2 with test

--- a/backend/src/Civix/ApiBundle/Resources/config/services/controller.yml
+++ b/backend/src/Civix/ApiBundle/Resources/config/services/controller.yml
@@ -52,3 +52,10 @@ services:
     Civix\ApiBundle\Controller\V2_2\PollCommentController:
         class: Civix\ApiBundle\Controller\V2_2\PollCommentController
         arguments: ['@doctrine.orm.entity_manager', '@security.token_storage']
+
+    Civix\ApiBundle\Controller\V2_2\Group\PostController:
+        class: Civix\ApiBundle\Controller\V2_2\Group\PostController
+        arguments:
+            - '@civix_core.post_manager'
+            - '@form.factory'
+            - '@security.token_storage'
