--- a/backend/src/Civix/ApiBundle/Resources/config/services/controller.yml
+++ b/backend/src/Civix/ApiBundle/Resources/config/services/controller.yml
@@ -59,3 +59,10 @@ services:
             - '@civix_core.post_manager'
             - '@form.factory'
             - '@security.token_storage'
+
+    Civix\ApiBundle\Controller\V2_2\Group\UserPetitionController:
+        class: Civix\ApiBundle\Controller\V2_2\Group\UserPetitionController
+        arguments:
+            - '@civix_core.user_petition_manager'
+            - '@form.factory'
+            - '@security.token_storage'
