Upd monolog channel for pushes

--- a/backend/src/Civix/CoreBundle/Resources/config/notification.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/notification.yml
@@ -80,7 +80,7 @@ services:
         public: false
         arguments:
             - '@event_dispatcher'
-            - '@logger'
+            - '@monolog.logger.push'
 
     civix.notification.sender:
         class: Civix\Component\Notification\Sender
