--- a/backend/src/Civix/CoreBundle/Resources/config/services/repository.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services/repository.yml
@@ -18,3 +18,8 @@ services:
         class: Civix\CoreBundle\Repository\DistrictRepository
         factory: ["@doctrine", "getRepository"]
         arguments: [Civix\CoreBundle\Entity\District]
+
+    civix_core.social_activity_repository:
+        class: Civix\CoreBundle\Repository\SocialActivityRepository
+        factory: ["@doctrine", "getRepository"]
+        arguments: [Civix\CoreBundle\Entity\SocialActivity]
