--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -326,7 +326,9 @@ nelmio_api_doc:
 
 bazinga_geocoder:
     providers:
-        google_maps: ~
+        google_maps:
+            api_key: '%google_api_key%'
+            use_ssl: true
 
 aws:
     version: latest
