Add command to generate thumbnails

--- a/backend/src/Civix/CoreBundle/Resources/config/command.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/command.yml
@@ -10,3 +10,12 @@ services:
         arguments: ['@doctrine.orm.entity_manager', '@civix_core.social_activity_factory']
         tags:
             - { name: console.command }
+
+    civix_core.command.thumbnail_generate_command:
+        class: Civix\CoreBundle\Command\ThumbnailGenerateCommand
+        arguments:
+            - '@doctrine.orm.entity_manager'
+            - '@civix.thumbnail_generator.thumbnail_generator'
+            - '@vich_uploader.upload_handler'
+        tags:
+            - { name: console.command }
