Handle errors in ThumbnailGenerateCommand

--- a/backend/src/Civix/CoreBundle/Resources/config/command.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/command.yml
@@ -17,5 +17,6 @@ services:
             - '@doctrine.orm.entity_manager'
             - '@civix.thumbnail_generator.thumbnail_generator'
             - '@vich_uploader.upload_handler'
+            - '@logger'
         tags:
             - { name: console.command }
