Add Post.image attribute

--- a/backend/src/Civix/CoreBundle/Resources/config/vich_uploader/Entity.Post.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/vich_uploader/Entity.Post.yml
@@ -1,4 +1,7 @@
 Civix\CoreBundle\Entity\Post:
+    image.file:
+        mapping: image_post
+        filename_property: image.name
     facebookThumbnail.file:
         mapping: thumbnail_post
         filename_property: facebookThumbnail.name
