--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -163,6 +163,12 @@ knp_gaufrette:
                 bucket_name: '%amazon_s3.bucket%'
                 options:
                     directory: 'announcement'
+        image_post_adapter:
+            aws_s3:
+                service_id: 'aws.s3'
+                bucket_name: '%amazon_s3.bucket%'
+                options:
+                    directory: 'post'
         thumbnail_post_adapter:
             aws_s3:
                 service_id: 'aws.s3'
@@ -190,6 +196,8 @@ knp_gaufrette:
             adapter: blog_post_adapter
         image_announcement_fs:
             adapter: image_announcement_adapter
+        image_post_fs:
+            adapter: image_post_adapter
         thumbnail_post_fs:
             adapter: thumbnail_post_adapter
         thumbnail_petition_fs:
@@ -235,6 +243,10 @@ vich_uploader:
         image_announcement:
             uri_prefix: /announcement
             upload_destination: image_announcement_fs
+            namer: vich_uploader.namer_uniqid
+        image_post:
+            uri_prefix: /post
+            upload_destination: image_post_fs
             namer: vich_uploader.namer_uniqid
         thumbnail_post:
             uri_prefix: /thumbnail/post
