--- a/backend/src/Civix/ApiBundle/Resources/config/services/controller.yml
+++ b/backend/src/Civix/ApiBundle/Resources/config/services/controller.yml
@@ -84,3 +84,9 @@ services:
     Civix\ApiBundle\Controller\V2\SecurityController:
         class: Civix\ApiBundle\Controller\V2\SecurityController
         arguments: ['@civix_core.user_manager', '@form.factory']
+
+    Civix\ApiBundle\Controller\V2_2\ActivityController:
+        class: Civix\ApiBundle\Controller\V2_2\ActivityController
+        arguments:
+            - '@doctrine.orm.entity_manager'
+            - '@security.token_storage'
