Generate a default avatar for local groups on creation

--- a/backend/src/Civix/CoreBundle/Resources/config/services.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services.yml
@@ -65,6 +65,7 @@ services:
             - '@geocoder'
             - '@doctrine.orm.entity_manager'
             - '@civix_core.repository.group_repository'
+            - '@event_dispatcher'
             - '@logger'
 
     civix_core.social_activity_factory:
