Handle thumbnail generation errors

--- a/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
@@ -114,6 +114,7 @@ services:
         arguments:
             - '@civix.thumbnail_generator.thumbnail_generator'
             - '@vich_uploader.upload_handler'
+            - '@logger'
         tags:
             - { name: kernel.event_subscriber }
 
