--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -55,6 +55,7 @@ doctrine:
         server_version: '5.6'
         types:
             uuid: Ramsey\Uuid\Doctrine\UuidType
+            phone_number: Misd\PhoneNumberBundle\Doctrine\DBAL\Types\PhoneNumberType
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
