--- a/backend/composer.json
+++ b/backend/composer.json
@@ -56,7 +56,9 @@
         "aws/aws-sdk-php": "~3.27",
         "yohang88/letter-avatar": "~1.0",
         "norkunas/onesignal-php-api": "~1.0",
-        "guzzlehttp/guzzle-services": "~1.1"
+        "guzzlehttp/guzzle-services": "~1.1",
+        "twilio/sdk": "^5.15",
+        "misd/phone-number-bundle": "^1.2"
     },
     "require-dev": {
         "phing/phing": "~2.16",
