--- a/backend/app/config/parameters.default.yml
+++ b/backend/app/config/parameters.default.yml
@@ -82,3 +82,8 @@ parameters:
     google_api_key: xxx
 
     authy_api_key: xxx
+
+    twilio_service_sid: xxx
+    twilio_account_sid: xxx
+    twilio_signing_key_sid: xxx
+    twilio_secret: xxx
