--- a/backend/app/config/security.yml
+++ b/backend/app/config/security.yml
@@ -41,12 +41,18 @@ security:
             anonymous: ~
 
         mobileuser_login:
-            pattern: ^(/api/secure/login|/api/v2/security/login)$
+            pattern: ^/api/(secure/login|v2/security/login|v2/security/recovery)$
             provider: mobileuser
             entry_point: civix_api.bearer_token_authentication_entry_point
             phone-login:
                 login_path: /api/v2/security/login
                 check_path: /api/v2/security/login
+                require_previous_session: false
+                success_handler: civix_api.security.authentication_success_handler
+                failure_handler: civix_api.security.authentication_failure_handler
+            email:
+                login_path: /api/v2/security/recovery
+                check_path: /api/v2/security/recovery
                 require_previous_session: false
                 success_handler: civix_api.security.authentication_success_handler
                 failure_handler: civix_api.security.authentication_failure_handler
